--- a/chamber/index.html
+++ b/chamber/index.html
@@ -16,11 +16,11 @@
     </head>
     <body>
         <header>
-            <a href="#"><img src="images/icon.webp" alt="Icon, a snowflake." class="icon" width="75px" height="87.61px"></a>
+            <a href="#"><img src="images/icon.webp" alt="Icon, a snowflake." class="icon"></a>
             <h1>Snowflake</h1>
             <h2>Chamber of Commerce</h2>
-            <a href="https://www.facebook.com/pages/category/Community-Organization/Snowflake-Taylor-Chamber-of-Commerce-482438121795674/" target="_blank"><figure class="facebook_logo"><img src="images/facebook40.webp" alt="Facebook Icon" srcset="images/facebook40.webp 1x, images/facebook80.webp 2x, images/facebook160.webp 3x" id="facebook" width="40px" height="40px"></figure></a>
-            <a href="https://mobile.twitter.com/SnowTaylor_CofC" target="_blank"><figure class="twitter_logo"><img src="images/twitter40.webp" alt="Twitter Icon" srcset="images/twitter40.webp 1x, images/twitter80.webp 2x, images/twitter160.webp 3x" id="twitter" width="40px" height="40px"></figure></a>
+            <a href="https://www.facebook.com/pages/category/Community-Organization/Snowflake-Taylor-Chamber-of-Commerce-482438121795674/" target="_blank"><figure class="facebook_logo"><img src="images/facebook40.webp" alt="Facebook Icon" srcset="images/facebook40.webp 1x, images/facebook80.webp 2x, images/facebook160.webp 3x" id="facebook"></figure></a>
+            <a href="https://mobile.twitter.com/SnowTaylor_CofC" target="_blank"><figure class="twitter_logo"><img src="images/twitter40.webp" alt="Twitter Icon" srcset="images/twitter40.webp 1x, images/twitter80.webp 2x, images/twitter160.webp 3x" id="twitter"></figure></a>
             <nav>
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                 <ul id="primaryNav">
