Fixed lazy loading on discover page/made page weight below 500kb.

--- a/chamber/discover/index.html
+++ b/chamber/discover/index.html
@@ -51,56 +51,31 @@
             </ul>
             <h3>Some interesting locations you may want to visit are:</h3>
             <div id="temple">
-                <picture>
-                    <source media="(max-width: 1369px)" srcset="https://via.placeholder.com/640x427.png" data-srcset="images/temple640.webp">
-                    <source media="(min-width: 1370px)" srcset="https://via.placeholder.com/1080x720.png" data-srcset="images/temple1080.webp">
-                    <img src="https://via.placeholder.com/640x427.png" alt="Snowflake Arizona LDS Temple" class="shadow">
-                </picture>
+                <img src="https://via.placeholder.com/640x427.png" data-src="images/temple640.webp" alt="Snowflake Arizona LDS Temple" class="shadow" loading="lazy">
                 <p>This is the LDS temple for Snowflake, Arizona. Construction started September 23, 2000 and dedicated March 3, 2002.</p>
             </div>
             <div id="museum">
-                <picture>
-                    <source media="(min-width: 0px)" srcset="https://via.placeholder.com/640x360.png" data-srcset="images/museum640.webp">
-                    <img src="https://via.placeholder.com/640x360.png" alt="Stinson Museum" class="shadow">
-                </picture>
+                <img src="https://via.placeholder.com/640x360.png" data-src="images/museum640.webp" alt="Stinson Museum" class="shadow">
                 <p>In this museum there are items from Snowflake's prehistoric, Hispanic and LDS Pioneer past. Two of the rooms have been restored to show the living conditions of early pioneer families.</p>
             </div>
             <div id="highschool">
-                <picture>
-                    <source media="(max-width: 1369px)" srcset="https://via.placeholder.com/640x360.png" data-srcset="images/highschool640.webp">
-                    <source media="(min-width: 1370px)" srcset="https://via.placeholder.com/1200x675.png" data-srcset="images/highschool1200.webp">
-                    <img src="https://via.placeholder.com/640x360.png" alt="Snowflake highschool" class="shadow">
-                </picture>
+                <img src="https://via.placeholder.com/640x360.png" data-src="images/highschool640.webp" alt="Snowflake highschool" class="shadow" loading="lazy">
                 <p>If your familly lives here, this is likely where you will be sending your children eventually. It is one of the oldest schools in Arizona established in 1888.</p>
             </div>
             <div id="downtown">
-                <picture>
-                    <source media="(max-width: 1369px)" srcset="https://via.placeholder.com/640x480.png" data-srcset="images/downtown640.webp">
-                    <source media="(min-width: 1370px)" srcset="https://via.placeholder.com/1024x768.png" data-srcset="images/downtown1024.webp">
-                    <img src="https://via.placeholder.com/640x480.png" alt="Downtown Snowflake" class="shadow">
-                </picture>
+                <img src="https://via.placeholder.com/640x480.png" data-src="images/downtown640.webp" alt="Downtown Snowflake" class="shadow" loading="lazy">
                 <p>This is downtown Snowflake.</p>
             </div>
             <div id="cabin">
-                <picture>
-                    <source media="(min-width: 0px)" srcset="https://via.placeholder.com/640x480.png" data-srcset="images/rogers_cabin640.webp">
-                    <img src="https://via.placeholder.com/640x480.png" alt="The Rogers' cabin" class="shadow">
-                </picture>
+                <img src="https://via.placeholder.com/640x480.png" data-src="images/rogers_cabin640.webp" alt="The Rogers' cabin" class="shadow" loading="lazy">
                 <p>This cabin was built by Andrew Locy Rogers in 1878. When his family grew he ended up covering it with drywall and then building a two-story house around it. His great-grandchildren forgot about the existence of the cabin so in 1989, when the house burnt down, those demolishing the ruins found the cabin completely undamaged.</p>
             </div>
             <div id="freeman">
-                <picture>
-                    <source media="(min-width: 0px)" srcset="https://via.placeholder.com/640x360.png" data-srcset="images/freeman_house640.webp">
-                    <img src="https://via.placeholder.com/640x360.png" alt="The Freeman's home" class="shadow">
-                </picture>
+                <img src="https://via.placeholder.com/640x360.png" data-src="images/freeman_house640.webp" alt="The Freeman's home" class="shadow" loading="lazy">
                 <p>The Freeman's home, built in 1893. It now has a small café in it and can be toured free of charge.</p>
             </div>
             <div id="flake">
-                <picture>
-                    <source media="(max-width: 1369px)" srcset="https://via.placeholder.com/640x425.png" data-srcset="images/flake_house640.webp">
-                    <source media="(min-width: 1370px)" srcset="https://via.placeholder.com/800x531.png" data-srcset="images/flake_house800.webp">
-                    <img src="https://via.placeholder.com/640x425.png" alt="The Flake's home" class="shadow">
-                </picture>
+                <img src="https://via.placeholder.com/640x425.png" data-src="images/flake_house640.webp" alt="The Flake's home" class="shadow" loading="lazy">
                 <p>This is James Flake's home built in 1894 16 years after Snowflake was founded.</p>
             </div>
         </main>
