Completely rearanged the file structure and fixed references.

--- a/chamber/home/index.html
+++ b/chamber/home/index.html
@@ -9,29 +9,29 @@
         <meta name="description" content="Snowflake, Arizona's Chamber of Commerce website home page with information of events and businesses.">
 
         <link rel="stylesheet" href="../css/normalize.css">
-        <link rel="stylesheet" href="css/all.css">
+        <link rel="stylesheet" href="../css/all.css">
         <link rel="stylesheet" href="css/base.css">
         <link rel="stylesheet" href="css/medium.css">
         <link rel="stylesheet" href="css/large.css">
     </head>
     <body>
         <header>
-            <a href="#"><img src="images/icon.webp" alt="Icon, a snowflake." class="icon"></a>
+            <a href="#"><img src="../images/icon.webp" alt="Icon, a snowflake." class="icon"></a>
             <h1>Snowflake</h1>
             <h2>Chamber of Commerce</h2>
-            <a href="https://www.facebook.com/pages/category/Community-Organization/Snowflake-Taylor-Chamber-of-Commerce-482438121795674/" target="_blank"><figure class="facebook_logo"><img src="images/facebook40.webp" alt="Facebook Icon" srcset="images/facebook40.webp 1x, images/facebook80.webp 2x, images/facebook160.webp 3x" id="facebook"></figure></a>
-            <a href="https://mobile.twitter.com/SnowTaylor_CofC" target="_blank"><figure class="twitter_logo"><img src="images/twitter40.webp" alt="Twitter Icon" srcset="images/twitter40.webp 1x, images/twitter80.webp 2x, images/twitter160.webp 3x" id="twitter"></figure></a>
+            <a href="https://www.facebook.com/pages/category/Community-Organization/Snowflake-Taylor-Chamber-of-Commerce-482438121795674/" target="_blank"><figure class="facebook_logo"><img src="../images/facebook40.webp" alt="Facebook Icon" srcset="../images/facebook40.webp 1x, ../images/facebook80.webp 2x, ../images/facebook160.webp 3x" id="facebook"></figure></a>
+            <a href="https://mobile.twitter.com/SnowTaylor_CofC" target="_blank"><figure class="twitter_logo"><img src="../images/twitter40.webp" alt="Twitter Icon" srcset="../images/twitter40.webp 1x, ../images/twitter80.webp 2x, ../images/twitter160.webp 3x" id="twitter"></figure></a>
             <nav>
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                 <ul id="primaryNav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="discover/">Discover</a></li>
-                    <li><a href="directory/">Directory</a></li>
-                    <li><a href="join/">Join</a></li>
+                    <li><a class="active">Home</a></li>
+                    <li><a href="../discover/">Discover</a></li>
+                    <li><a href="../directory/">Directory</a></li>
+                    <li><a href="../join/">Join</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-            <p id="date">Saturday, 14 May 2022</p>
+            <p id="date"></p>
         </header>
         <div id="banner">
             <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
@@ -49,16 +49,16 @@
             </div>
 
             <div id="event">
-                <h3>May Lunch and Learn</h3>
-                <p>This month's speaker/sponser is Chase Bank!<br>Join us at the Snowflake Social Hall:<br>May 25, 2022 @ 12:00 pm - 1:00 pm</p>
-                <figure class="chase_logo"><img src="images/icons/chase_bank150.webp" alt="Chase bank's symbol" srcset="images/icons/chase_bank150.webp 1x, images/icons/chase_bank300.webp 2x, images/icons/chase_bank600.webp 3x"></figure>
+                <h3>July Lunch and Learn</h3>
+                <p>This month's speaker/sponser is Chase Bank!<br>Join us at the Snowflake Social Hall:<br>July 25, 2022 @ 12:00 pm - 1:00 pm</p>
+                <figure class="chase_logo"><img src="../images/icons/chase_bank150.webp" alt="Chase bank's symbol" srcset="../images/icons/chase_bank150.webp 1x, ../images/icons/chase_bank300.webp 2x, ../images/icons/chase_bank600.webp 3x"></figure>
             </div>
 
             <div id="weather">
                 <h3>Weather</h3>
                 <div id="temp">
                     <figure>
-                        <img src="images/clear_weather70.webp" alt="" id="weather-icon">
+                        <img src="#" alt="" id="weather-icon">
                         <figcaption></figcaption>
                     </figure>
                     <h4><span id="current-temp"></span>°F</h4>
@@ -82,21 +82,21 @@
             <div id="spotlights">
                 <div id="spotlight1">
                     <h3>Chase Bank</h3>
-                    <figure class="chase_logo"><img src="images/icons/chase_bank150.webp" alt="Chase bank's symbol" srcset="images/icons/chase_bank150.webp 1x, images/icons/chase_bank300.webp 2x, images/icons/chase_bank600.webp 3x"></figure>
+                    <figure class="chase_logo"><img src="../images/icons/chase_bank150.webp" alt="Chase bank's symbol" srcset="../images/icons/chase_bank150.webp 1x, ../images/icons/chase_bank300.webp 2x, ../images/icons/chase_bank600.webp 3x"></figure>
                     <p>Helping you make the most of your money.</p>
                     <p class="contact">Phone: (928) 537-4311</p>
                 </div>
 
                 <div id="spotlight2">
                     <h3>Streets on Main</h3>
-                    <figure class="streets_logo"><img src="images/icons/streets_on_main150.webp" alt="Streets on main logo" srcset="images/icons/streets_on_main150.webp 1x, images/icons/streets_on_main255.webp 2x, images/icons/streets_on_main255.webp 3x"></figure>
+                    <figure class="streets_logo"><img src="../images/icons/streets_on_main150.webp" alt="Streets on main logo" srcset="../images/icons/streets_on_main150.webp 1x, ../images/icons/streets_on_main255.webp 2x, ../images/icons/streets_on_main255.webp 3x"></figure>
                     <p>A locally owned and family operated restaurant.</p>
                     <p class="contact">Phone: (928) 275-3663</p>
                 </div>
 
                 <div id="spotlight3">
                     <h3>El Cupidos</h3>
-                    <figure class="cupidos_logo"><img src="images/icons/el_cupidos260.webp" alt="El Cupido's logo" srcset="images/icons/el_cupidos260.webp 1x, images/icons/el_cupidos500.webp 2x, images/icons/el_cupidos500.webp 3x"></figure>
+                    <figure class="cupidos_logo"><img src="../images/icons/el_cupidos260.webp" alt="El Cupido's logo" srcset="../images/icons/el_cupidos260.webp 1x, ../images/icons/el_cupidos500.webp 2x, ../images/icons/el_cupidos500.webp 3x"></figure>
                     <p>We are fine, fresh and best of all, Mexican.</p>
                     <p class="contact">Phone: (928) 537-4311</p>
                 </div>
@@ -104,7 +104,7 @@
         </main>
         <footer>
             <div id="main">
-                <a href="#" id="iconlink"><img src="images/icon.webp" alt="Icon, a snowflake." class="icon" width="100px" height="116.81px"></a>
+                <a href="#" id="iconlink"><img src="../images/icon.webp" alt="Icon, a snowflake." class="icon" width="100px" height="116.81px"></a>
                 <h2 id="title">Snowflake Chamber of Commerce</h2>
                 <p id="address">113 Main St<br>Snowflake, AZ 85937</p>
                 <p id="email">us@snowflakechamber.com</p>
@@ -118,7 +118,7 @@
                 <p id="lastUpdated"></p>
             </div>
         </footer>
-        <script src="js/base.js"></script>
+        <script src="../js/base.js"></script>
         <script src="js/windchill.js"></script>
         <script src="js/temp.js"></script>
     </body>
