--- a/chamber/thankyou/index.html
+++ b/chamber/thankyou/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Danel G. Rasmussen">
         <meta name="description" content="Thank you for filling out our form.">
 
-        <link rel="stylesheet" href="/../../css/normalize.css">
+        <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/all.css">
         <link rel="stylesheet" href="css/base.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +25,7 @@
             <nav>
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                 <ul id="primaryNav">
-                    <li><a href="../">Home</a></li>
+                    <li><a href="../home/">Home</a></li>
                     <li ><a href="../discover/">Discover</a></li>
                     <li><a href="#">Directory</a></li>
                     <li><a href="../join/">Join</a></li>
