--- a/index.html
+++ b/index.html
@@ -7,28 +7,28 @@
         <meta name="author" content="Danel G. Rasmussen">
         <meta name="description" content="The hub for links to all other of Daniel Rasmussen's WDD 230 assignments.">
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/small.css">
-        <link rel="stylesheet" href="css/medium.css">
+        <link rel="stylesheet" href="home/css/normalize.css">
+        <link rel="stylesheet" href="home/css/small.css">
+        <link rel="stylesheet" href="home/css/medium.css">
     </head>
     <body>
         <header>
-            <img src="images/myPicture.jpg" alt="Picture of Daniel G. Rasmussen">
+            <img src="home/images/myPicture.jpg" alt="Picture of Daniel G. Rasmussen">
             <h1>Daniel G. Rasmussen</h1>
         </header>
 
         <main>
             <h2>WDD 230 Assignment Portal</h2>
             <ul>
-                <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
-                <li>Lesson 03: <a href="lesson3/index.html">Website Planning Document</a></li>
-                <li>Lesson 04: <a href="chamber/">Chamber of Commerce</a></li>
-                <li>Lesson 05: <a href="lesson5/bom.html">Dom Manipulation</a></li>
-                <li>Lesson 06: <a href="chamber/">Chamber of Commerce</a></li>
-                <li>Lesson 07: <a href="lesson7/lazyload.html">Progressive Loading</a> <a href="chamber/discover/">Discover Page</a></li>
-                <li>Lesson 08: <a href="lesson8/tablebuild.html">Tablebuild</a> <a href="form/">Form</a> <a href="chamber/join/">Join Page</a></li>
-                <li>Lesson 09: <a href="lesson9/prophets.html">JSON</a> <a href="chamber/directory/">Directory</a></li>
-                <li>Lesson 10: <a href="lesson10/weather-api.html">Weather API</a> <a href="chamber/">Weather Widget</a></li>
+                <li>Lesson 02: <a href="lessons/lesson2/design-principles.html">Design Principles</a></li>
+                <li>Lesson 03: <a href="lessons/lesson3/index.html">Website Planning Document</a></li>
+                <li>Lesson 04: <a href="chamber/home/">Chamber of Commerce</a></li>
+                <li>Lesson 05: <a href="lessons/lesson5/bom.html">Dom Manipulation</a></li>
+                <li>Lesson 06: <a href="chamber/home/">Chamber of Commerce</a></li>
+                <li>Lesson 07: <a href="lessons/lesson7/lazyload.html">Progressive Loading</a> <a href="chamber/discover/">Discover Page</a></li>
+                <li>Lesson 08: <a href="lessons/lesson8/tablebuild.html">Tablebuild</a> <a href="lessons/form/">Form</a> <a href="chamber/join/">Join Page</a></li>
+                <li>Lesson 09: <a href="lessons/lesson9/prophets.html">JSON</a> <a href="chamber/directory/">Directory</a></li>
+                <li>Lesson 10: <a href="lessons/lesson10/weather-api.html">Weather API</a> <a href="chamber/home/">Weather Widget</a></li>
                 <li>Lesson 11: <a href="#">Lesson 11</a></li>
             </ul>
         </main>
@@ -36,6 +36,6 @@
             <p id="info"></p>
             <p id="lastUpdated"></p>
         </footer>
-        <script type="text/javascript" src="js/main.js"></script>
+        <script type="text/javascript" src="home/js/main.js"></script>
     </body>
 </html>
