--- a/lessons/form/index.html
+++ b/lessons/form/index.html
@@ -15,7 +15,7 @@
 
 
 <!-- STYLE SHEETS -->
-<link href="css/normalize.css" rel="stylesheet">
+<link href="../../home/css/normalize.css" rel="stylesheet">
 <!-- phone-default -->
 <link href="css/small.css" rel="stylesheet">
 <!-- enhance-tablet -->
