--- a/lessons/lesson7/lazyload.html
+++ b/lessons/lesson7/lazyload.html
@@ -7,8 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="To show progressive loading and practice at doing it for WDD230 class at BYUI.">
 
-        <link rel="stylesheet" href="../css/normalize.css">
-        <link rel="stylesheet" href="../css/all.css">
+        <link rel="stylesheet" href="../../home/css/normalize.css">
+        <link rel="stylesheet" href="../../home/css/all.css">
         <link rel="stylesheet" href="css/base.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,6 +42,6 @@
             <p id="lastUpdated"></p>
         </footer>
         <script type="text/javascript" src="js/main.js"></script>
-        <script type="text/javascript" src="../js/main.js"></script>
+        <script type="text/javascript" src="../../home/js/main.js"></script>
     </body>
 </html>
