--- a/lessons/lesson9/prophets.html
+++ b/lessons/lesson9/prophets.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Practice JSON by loading a page with the Prophets and info.">
 
-        <link rel="stylesheet" href="../css/normalize.css">
+        <link rel="stylesheet" href="../../home/css/normalize.css">
         <link rel="stylesheet" href="css/base.css">
     </head>
     <body>
