--- a/chamber/directory/index.html
+++ b/chamber/directory/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Danel G. Rasmussen">
         <meta name="description" content="Directory page. This has a list of all of our partnered businesses and some information about them.">
 
-        <link rel="stylesheet" href="../../css/normalize.css">
+        <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/all.css">
         <link rel="stylesheet" href="css/base.css">
         <link rel="stylesheet" href="css/medium.css">
@@ -25,8 +25,8 @@
             <nav>
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                 <ul id="primaryNav">
-                    <li><a href="../">Home</a></li>
-                    <li ><a href="../discover/">Discover</a></li>
+                    <li><a href="../home/">Home</a></li>
+                    <li><a href="../discover/">Discover</a></li>
                     <li><a class="active">Directory</a></li>
                     <li><a href="../join/">Join</a></li>
                     <li><a href="#">Contact</a></li>
