--- a/chamber/discover/index.html
+++ b/chamber/discover/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Danel G. Rasmussen">
         <meta name="description" content="Discover page. Here you can discover interesting things about Snowflake, Arizona.">
 
-        <link rel="stylesheet" href="../../css/normalize.css">
+        <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/all.css">
         <link rel="stylesheet" href="css/base.css">
         <link rel="stylesheet" href="css/medium.css">
@@ -27,7 +27,7 @@
             <nav>
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                 <ul id="primaryNav">
-                    <li><a href="../">Home</a></li>
+                    <li><a href="../home/">Home</a></li>
                     <li><a class="active">Discover</a></li>
                     <li><a href="../directory/">Directory</a></li>
                     <li><a href="../join/">Join</a></li>
