--- a/lessons/lesson10/weather-api.html
+++ b/lessons/lesson10/weather-api.html
@@ -7,8 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Practice using a weather API in code.">
 
-        <link rel="stylesheet" href="../css/normalize.css">
-        <link rel="stylesheet" href="../css/all.css">
+        <link rel="stylesheet" href="../../home/css/normalize.css">
+        <link rel="stylesheet" href="../../home/css/all.css">
         <link rel="stylesheet" href="css/base.css">
     </head>
     <body>
@@ -32,6 +32,6 @@
             <p id="lastUpdated"></p>
         </footer>
         <script type="text/javascript" src="js/weatherapi.js"></script>
-        <script type="text/javascript" src="../js/main.js"></script>
+        <script type="text/javascript" src="../../home/js/main.js"></script>
     </body>
 </html>
