--- a/lessons/lesson2/design-principles.html
+++ b/lessons/lesson2/design-principles.html
@@ -7,8 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Explainations of important design principles for web development.">
 
-        <link rel="stylesheet" href="../css/normalize.css">
-        <link rel="stylesheet" href="../css/all.css">
+        <link rel="stylesheet" href="../../home/css/normalize.css">
+        <link rel="stylesheet" href="../../home/css/all.css">
         <link rel="stylesheet" href="css/small.css">
         <link rel="stylesheet" href="css/medium.css">
         <link rel="stylesheet" href="css/large.css">
@@ -57,6 +57,6 @@
             <p id="info"></p>
             <p id="lastUpdated"></p>
         </footer>
-        <script type="text/javascript" src="../js/main.js"></script>
+        <script type="text/javascript" src="../../home/js/main.js"></script>
     </body>
 </html>
