--- a/lessons/lesson3/color-scheme.html
+++ b/lessons/lesson3/color-scheme.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
 
-        <link rel="stylesheet" href="../css/normalize.css">
+        <link rel="stylesheet" href="../../home/css/normalize.css">
         <link rel="stylesheet" href="css/small.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,6 +37,6 @@
         <footer>
             
         </footer>
-        <script type="text/javascript" src="/js/main.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
