--- a/lessons/lesson5/bom.html
+++ b/lessons/lesson5/bom.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Explainations of important design principles for web development.">
 
-        <link rel="stylesheet" href="../css/normalize.css">
+        <link rel="stylesheet" href="../../home/css/normalize.css">
         <link rel="stylesheet" href="css/base.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
