Added the spotlight randomizer.

--- a/chamber/home/index.html
+++ b/chamber/home/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Snowflake Chamber | Home</title>
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <link rel="icon" href="../favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Danel G. Rasmussen">
         <meta name="description" content="Snowflake, Arizona's Chamber of Commerce website home page with information of events and businesses.">
@@ -80,14 +80,7 @@
             </div>
             
             <div id="spotlights">
-                <div id="spotlight1">
-                    <h3>Chase Bank</h3>
-                    <figure class="chase_logo"><img src="../images/icons/chase_bank150.webp" alt="Chase bank's symbol" srcset="../images/icons/chase_bank150.webp 1x, ../images/icons/chase_bank300.webp 2x, ../images/icons/chase_bank600.webp 3x"></figure>
-                    <p>Helping you make the most of your money.</p>
-                    <p class="contact">Phone: (928) 537-4311</p>
-                </div>
-
-                <div id="spotlight2">
+                <!-- <div id="spotlight2">
                     <h3>Streets on Main</h3>
                     <figure class="streets_logo"><img src="../images/icons/streets_on_main150.webp" alt="Streets on main logo" srcset="../images/icons/streets_on_main150.webp 1x, ../images/icons/streets_on_main255.webp 2x, ../images/icons/streets_on_main255.webp 3x"></figure>
                     <p>A locally owned and family operated restaurant.</p>
@@ -99,7 +92,7 @@
                     <figure class="cupidos_logo"><img src="../images/icons/el_cupidos260.webp" alt="El Cupido's logo" srcset="../images/icons/el_cupidos260.webp 1x, ../images/icons/el_cupidos500.webp 2x, ../images/icons/el_cupidos500.webp 3x"></figure>
                     <p>We are fine, fresh and best of all, Mexican.</p>
                     <p class="contact">Phone: (928) 537-4311</p>
-                </div>
+                </div> -->
             </div>
         </main>
         <footer>
@@ -119,6 +112,7 @@
             </div>
         </footer>
         <script src="../js/base.js"></script>
+        <script src="js/spotlight.js"></script>
         <script src="js/windchill.js"></script>
         <script src="js/temp.js"></script>
     </body>
