--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+
+<!--
+TODO:
+
+1. Max 750px footer move icon to above other info.
+
+-->
+
 <html lang="en">
     <head>
         <meta charset="utf-8">
