--- a/chamber/home/index.html
+++ b/chamber/home/index.html
@@ -28,7 +28,7 @@
                     <li><a href="../discover/">Discover</a></li>
                     <li><a href="../directory/">Directory</a></li>
                     <li><a href="../join/">Join</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="../contact/">Contact</a></li>
                 </ul>
             </nav>
             <p id="date"></p>
