--- a/chamber/join/index.html
+++ b/chamber/join/index.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <header>
-            <a href="../"><img src="../images/icon.webp" alt="Icon, a snowflake." class="icon"></a>
+            <a href="../home/"><img src="../images/icon.webp" alt="Icon, a snowflake." class="icon"></a>
             <h1>Snowflake</h1>
             <h2>Chamber of Commerce</h2>
             <a href="https://www.facebook.com/pages/category/Community-Organization/Snowflake-Taylor-Chamber-of-Commerce-482438121795674/" target="_blank"><figure class="facebook_logo"><img src="../images/facebook40.webp" alt="Facebook Icon" srcset="../images/facebook40.webp 1x, ../images/facebook80.webp 2x, ../images/facebook160.webp 3x" id="facebook"></figure></a>
@@ -31,7 +31,7 @@
                     <li ><a href="../discover/">Discover</a></li>
                     <li><a href="../directory/">Directory</a></li>
                     <li><a class="active">Join</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="../contact/">Contact</a></li>
                 </ul>
             </nav>
             <p id="date">Saturday, 14 May 2022</p>
@@ -40,7 +40,7 @@
             <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
         </div>
         <main>
-            <form method="get" action="../thankyou/" aria-label="The form to join the chamber of commerce.">
+            <form method="get" action="thankyou/" aria-label="The form to join the chamber of commerce.">
                 <fieldset id="info">
                     <legend>Applicant Information</legend>
                     <div id="center">
@@ -117,7 +117,7 @@
         </main>
         <footer>
             <div id="main">
-                <a href="../" id="iconlink"><img src="../images/icon.webp" alt="Icon, a snowflake." class="icon"></a>
+                <a href="../home/" id="iconlink"><img src="../images/icon.webp" alt="Icon, a snowflake." class="icon"></a>
                 <h2 id="title">Snowflake Chamber of Commerce</h2>
                 <p id="address">113 Main St<br>Snowflake, AZ 85937</p>
                 <p id="email">us@snowflakechamber.com</p>
