--- a/chamber/join/thankyou/index.html
+++ b/chamber/join/thankyou/index.html
@@ -8,8 +8,8 @@
         <meta name="author" content="Danel G. Rasmussen">
         <meta name="description" content="Thank you for filling out our form.">
 
-        <link rel="stylesheet" href="../css/normalize.css">
-        <link rel="stylesheet" href="../css/all.css">
+        <link rel="stylesheet" href="../../css/normalize.css">
+        <link rel="stylesheet" href="../../css/all.css">
         <link rel="stylesheet" href="css/base.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
     </head>
     <body>
         <header>
-            <a href="../"><img src="../images/icon.webp" alt="Icon, a snowflake." class="icon"></a>
+            <a href="../../home/"><img src="../../images/icon.webp" alt="Icon, a snowflake." class="icon"></a>
             <h1>Snowflake</h1>
             <h2>Chamber of Commerce</h2>
             <a href="https://www.facebook.com/pages/category/Community-Organization/Snowflake-Taylor-Chamber-of-Commerce-482438121795674/" target="_blank"><figure class="facebook_logo"><img src="../images/facebook40.webp" alt="Facebook Icon" srcset="../images/facebook40.webp 1x, ../images/facebook80.webp 2x, ../images/facebook160.webp 3x" id="facebook"></figure></a>
@@ -25,11 +25,11 @@
             <nav>
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                 <ul id="primaryNav">
-                    <li><a href="../home/">Home</a></li>
-                    <li ><a href="../discover/">Discover</a></li>
-                    <li><a href="#">Directory</a></li>
-                    <li><a href="../join/">Join</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="../../home/">Home</a></li>
+                    <li ><a href="../../discover/">Discover</a></li>
+                    <li><a href="../../directory/">Directory</a></li>
+                    <li><a href="../">Join</a></li>
+                    <li><a href="../../contact/">Contact</a></li>
                 </ul>
             </nav>
             <p id="date">Saturday, 14 May 2022</p>
@@ -43,7 +43,7 @@
         </main>
         <footer>
             <div id="main">
-                <a href="../" id="iconlink"><img src="../images/icon.webp" alt="Icon, a snowflake." class="icon"></a>
+                <a href="../../home/" id="iconlink"><img src="../../images/icon.webp" alt="Icon, a snowflake." class="icon"></a>
                 <h2 id="title">Snowflake Chamber of Commerce</h2>
                 <p id="address">113 Main St<br>Snowflake, AZ 85937</p>
                 <p id="email">us@snowflakechamber.com</p>
