Fixed favicon references in and titles

--- a/chamber/404/index.html
+++ b/chamber/404/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Snowflake Chamber | 404</title>
+        <title>404 | Snowflake Chamber</title>
         <link rel="icon" href="../favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Danel G. Rasmussen">
