--- a/chamber/contact/thankyou/index.html
+++ b/chamber/contact/thankyou/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Snowflake Chamber of Commerce | Thank You</title>
-        <link rel="icon" href="../favicon.ico" type="image/x-icon">
+        <title>Thank You | Snowflake Chamber</title>
+        <link rel="icon" href="../../favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Danel G. Rasmussen">
         <meta name="description" content="Thank you for filling out our form.">
