--- a/chamber/contact/thankyou/index.html
+++ b/chamber/contact/thankyou/index.html
@@ -57,6 +57,6 @@
                 <p id="lastUpdated"></p>
             </div>
         </footer>
-        <script src="../js/base.js"></script>
+        <script src="../../js/base.js"></script>
     </body>
 </html>
