Updating more issues as I go along

--- a/chamber/home/index.html
+++ b/chamber/home/index.html
@@ -48,7 +48,7 @@
                     <img src="images/bannerlarge.webp" alt="Picture of snowflake arizona">
                 </picture>
                 <h3>Welcome!</h3>
-                <a href="join/">Join Us</a>
+                <a href="../join/">Join Us</a>
             </div>
 
             <div id="event">
@@ -78,24 +78,12 @@
             </div>
 
             <div id="join">
-                <a href="join/"><h3>Join Us!</h3></a>
+                <a href="../join/"><h3>Join Us!</h3></a>
                 <p>Want to become a chamber member? Fill out an online application.</p>
             </div>
             
             <div id="spotlights">
-                <!-- <div id="spotlight2">
-                    <h3>Streets on Main</h3>
-                    <figure class="streets_logo"><img src="../images/icons/streets_on_main150.webp" alt="Streets on main logo" srcset="../images/icons/streets_on_main150.webp 1x, ../images/icons/streets_on_main255.webp 2x, ../images/icons/streets_on_main255.webp 3x"></figure>
-                    <p>A locally owned and family operated restaurant.</p>
-                    <p class="contact">Phone: (928) 275-3663</p>
-                </div>
-
-                <div id="spotlight3">
-                    <h3>El Cupidos</h3>
-                    <figure class="cupidos_logo"><img src="../images/icons/el_cupidos260.webp" alt="El Cupido's logo" srcset="../images/icons/el_cupidos260.webp 1x, ../images/icons/el_cupidos500.webp 2x, ../images/icons/el_cupidos500.webp 3x"></figure>
-                    <p>We are fine, fresh and best of all, Mexican.</p>
-                    <p class="contact">Phone: (928) 537-4311</p>
-                </div> -->
+                
             </div>
         </main>
         <footer>
