Fixed more stuffs

--- a/chamber/contact/index.html
+++ b/chamber/contact/index.html
@@ -50,9 +50,9 @@
                 </ul>
             </div>
             
-            <form method="get" action="thankyou/" aria-label="The form to join the chamber of commerce.">
+            <form method="get" action="thankyou/" aria-label="The form to contact the chamber of commerce.">
                 <fieldset>
-                    <legend>Get in contact with us</legend>
+                    <h3>Get in contact with us</h3>
                     <label>Name* <input type="text" name="name" required></label>
                     <label>Email* <input type="email" name="email" placeholder="someone@gmail.com" required></label>
                     <label>Phone <input type="tel" name="phone" placeholder="1235551234"></label>
