--- a/chamber/directory/index.html
+++ b/chamber/directory/index.html
@@ -9,6 +9,7 @@
         <meta name="description" content="Directory page. This has a list of all of our partnered businesses and some information about them.">
 
         <link rel="stylesheet" href="../css/normalize.css">
+        <link rel="stylesheet" href="../css/symbols.css">
         <link rel="stylesheet" href="../css/all.css">
         <link rel="stylesheet" href="css/base.css">
         <link rel="stylesheet" href="css/medium.css">
@@ -16,7 +17,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header>
@@ -52,7 +52,7 @@
         </main>
         <footer>
             <div id="main">
-                <a href="../home/" id="iconlink"><img src="../images/icon.webp" alt="Icon, a snowflake." class="icon" width="100px" height="116.81px"></a>
+                <a href="../home/" id="iconlink"><img src="../images/icon.webp" alt="Icon, a snowflake." class="icon"></a>
                 <h2 id="title">Snowflake Chamber of Commerce</h2>
                 <p id="address">113 Main St<br>Snowflake, AZ 85937</p>
                 <p id="email">us@snowflakechamber.com</p>
