--- a/chamber/home/index.html
+++ b/chamber/home/index.html
@@ -88,7 +88,7 @@
         </main>
         <footer>
             <div id="main">
-                <a href="#" id="iconlink"><img src="../images/icon.webp" alt="Icon, a snowflake." class="icon" width="100px" height="116.81px"></a>
+                <a href="#" id="iconlink"><img src="../images/icon.webp" alt="Icon, a snowflake." class="icon"></a>
                 <h2 id="title">Snowflake Chamber of Commerce</h2>
                 <p id="address">113 Main St<br>Snowflake, AZ 85937</p>
                 <p id="email">us@snowflakechamber.com</p>
