Fixing more errors.

--- a/chamber/directory/index.html
+++ b/chamber/directory/index.html
@@ -9,7 +9,6 @@
         <meta name="description" content="Directory page. This has a list of all of our partnered businesses and some information about them.">
 
         <link rel="stylesheet" href="../css/normalize.css">
-        <link rel="stylesheet" href="../css/symbols.css">
         <link rel="stylesheet" href="../css/all.css">
         <link rel="stylesheet" href="css/base.css">
         <link rel="stylesheet" href="css/medium.css">
@@ -17,6 +16,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header>
@@ -42,8 +42,8 @@
         </div>
         <main>
             <div id="menu">
-                <button id="grid"><i class="fa fa-th fa-2x"></i></button>
-                <button id="list" class="selected"><i class="fa fa-list-ul fa-2x"></i></button>
+                <button id="grid">&#8205;<i class="fa fa-th fa-2x"></i></button>
+                <button id="list" class="selected">&#8205;<i class="fa fa-list-ul fa-2x"></i></button>
             </div>
 
             <article class="list">
