Fixed join benefits mistake

--- a/chamber/join/index.html
+++ b/chamber/join/index.html
@@ -62,7 +62,7 @@
                         <span class="p">Free membership for non profit organizations only.</span>
                         <span class="h4">Benefits:</span>
                         <span class="li">Discounts</span>
-                        <span class="li">Main page advertisment</span>
+                        <span class="li">Training</span>
                     </label>
 
                     <input type="radio" name="membership" value="bronze" class="membership" id="bronze">
