Added todo item

--- a/temple/index.html
+++ b/temple/index.html
@@ -3,6 +3,7 @@
     <!-- TO DO
     1. Fix footer icon link
     2. Drop down for services with Services, Reception, Missionaries
+        2.5 Change color for hover on the nav
     3. Main page content
     4. Temples content
     5. Reservations content
