--- a/temple/services/missionary/index.html
+++ b/temple/services/missionary/index.html
@@ -17,20 +17,27 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header>
             <a href="../../"><img src="../../images/icon.webp" alt="Icon" class="icon"></a>
             <h1>The Temple Inn & Suites</h1>
-            <a href="https://www.facebook.com" target="_blank"><figure class="facebook_logo"><img src="../../images/facebook40.webp" alt="Facebook Icon" srcset="../../images/facebook40.webp 1x, images/facebook80.webp 2x, images/facebook160.webp 3x" id="facebook"></figure></a>
-            <a href="https://mobile.twitter.com" target="_blank"><figure class="twitter_logo"><img src="../../images/twitter40.webp" alt="Twitter Icon" srcset="../../images/twitter40.webp 1x, images/twitter80.webp 2x, images/twitter160.webp 3x" id="twitter"></figure></a>
+            <a href="https://www.facebook.com" target="_blank"><figure class="facebook_logo"><img src="../../images/facebook40.webp" alt="Facebook Icon" srcset="../../images/facebook40.webp 1x,../../images/facebook80.webp 2x, ../../images/facebook160.webp 3x" id="facebook"></figure></a>
+            <a href="https://mobile.twitter.com" target="_blank"><figure class="twitter_logo"><img src="../../images/twitter40.webp" alt="Twitter Icon" srcset="../../images/twitter40.webp 1x, ../../images/twitter80.webp 2x, ../../images/twitter160.webp 3x" id="twitter"></figure></a>
             <nav>
                 <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                 <ul id="primaryNav">
                     <li><a href="../../">Home</a></li>
                     <li><a href="../../temples/">Temples</a></li>
                     <li><a href="../../reservations/">Reservations</a></li>
-                    <li><a href="../">Services</a></li>
+                    <div class="dropdown">
+                        <li class="dropbtn"><a href="../">Services <i class="fa fa-caret-down"></i></a></li>
+                        <div class="dropdown-content">
+                            <a href="../reception/">Reception</a></li>
+                            <a class="active">Temple Missionary</a></li>
+                        </div>
+                    </div>
                 </ul>
             </nav>
         </header>
