--- a/temple/temples/index.html
+++ b/temple/temples/index.html
@@ -17,6 +17,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header>
@@ -30,7 +31,13 @@
                     <li><a href="../">Home</a></li>
                     <li><a class="active">Temples</a></li>
                     <li><a href="../reservations/">Reservations</a></li>
-                    <li><a href="../services/">Services</a></li>
+                    <div class="dropdown">
+                        <li class="dropbtn"><a href="../services/">Services <i class="fa fa-caret-down"></i></a></li>
+                        <div class="dropdown-content">
+                            <a href="../services/reception/">Reception</a></li>
+                            <a href="../services/missionary/">Temple Missionary</a></li>
+                        </div>
+                    </div>
                 </ul>
             </nav>
         </header>
