Finished the header and footer for every page!

--- a/temple/index.html
+++ b/temple/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <!-- TO DO
-    1. Fix footer icon link
     3. Main page content
     4. Temples content
     5. Reservations content
@@ -58,7 +57,7 @@
             
         </main>
         <footer>
-            <a id="iconlink"><img src="images/icon.webp" alt="Icon" class="icon"></a>
+            <img src="images/icon.webp" alt="Icon" class="icon">
             <div class="grid">
                 <div id="contact">
                     <h2 id="title">Contact Info</h2>
