--- a/temple/services/reception/index.html
+++ b/temple/services/reception/index.html
@@ -49,7 +49,7 @@
             
         </main>
         <footer>
-            <a href="../../" id="iconlink"><img src="../../images/icon.webp" alt="Icon" class="icon"></a>
+            <img src="../../images/icon.webp" alt="Icon" class="icon">
             <div class="grid">
                 <div id="contact">
                     <h2 id="title">Contact Info</h2>
